[gd_scene load_steps=10 format=2]

[ext_resource path="res://recursos/Fonts/Kenney Future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://juego/Menus/MenuInicio.gd" type="Script" id=2]
[ext_resource path="res://recursos/audio/sfx/select_1.wav" type="AudioStream" id=3]
[ext_resource path="res://recursos/audio/musica/Musica Presentacion/POL-building-the-future-short.tres" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 35
font_data = ExtResource( 1 )

[node name="MenuInicio" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
menu_ajustes = "res://juego/Menus/MenuAjustes.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Titulo" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -210.0
margin_right = 144.0
margin_bottom = -147.0
custom_fonts/font = SubResource( 1 )
text = "Godotin"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.5
margin_top = -120.0
margin_right = 113.5
margin_bottom = 120.0

[node name="BotonCargar" type="Button" parent="VBoxContainer"]
margin_right = 227.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
disabled = true
text = "Cargar"

[node name="BotonNuevo" type="Button" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 227.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 3 )
text = "nuevo"

[node name="BotonOpciones" type="Button" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 227.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 4 )
text = "opciones"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 227.0
margin_bottom = 154.0

[node name="BotonSalir" type="Button" parent="VBoxContainer"]
margin_top = 158.0
margin_right = 227.0
margin_bottom = 204.0
custom_fonts/font = SubResource( 5 )
text = "salir"

[node name="BotonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="Musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "Musica"

[connection signal="pressed" from="VBoxContainer/BotonOpciones" to="." method="_on_BotonOpciones_pressed"]
[connection signal="pressed" from="VBoxContainer/BotonSalir" to="." method="_on_BotonSalir_pressed"]
